--- a/.github/workflows/scheduled-posts.yml
+++ b/.github/workflows/scheduled-posts.yml
@@ -1,8 +1,8 @@
-name: Build every hour
+name: Build every night
 
 on:
   schedule:
-   - cron: '0 * * * *'
+   - cron: '30 2 * * *'
 jobs:
   curl:
     runs-on: ubuntu-latest
