--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Counting
+title: Applied Maths
 email: opensecondaryschool@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  How to count. Write an awesome description for your new site here. You can edit this
+  Applied Maths includes a counting blog and worked examples. (edit this
   line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Google search results) and in your feed.xml site description.)
 baseurl: "/AppliedMaths" # the subpath of your site, e.g. /blog
 url: "http://localhost:4000/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
