default layouts added to config
now no spaces issues with config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -56,3 +56,19 @@ plugins:
 collections:
   statistics:
    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "statistics"
+    values:
+      layout: "topic"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"      
