--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ defaults:
       path: ""
       type: "statistics"
     values:
-      layout: "post"
+      layout: "topic"
   - scope:
       path: ""
       type: "posts"
