--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,5 @@
   link: /about.html
 - name: Counting Blog
   link: /countingblog.html
-- name: Stats-Resources
-  link: /Stats-Resources.html
+- name: Statistics
+  link: /Statistics.html
