--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baseurl: "/AppliedMaths" # the subpath of your site, e.g. /blog
 url: "http://localhost:4000/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  iotaxi
-future: true
+future: false
 # Build settings
 theme: minima
 plugins:
